Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15418

X11 -geometry argument fixes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.3.2
    • 4.6.0, 4.7.0, 4.7.1
    • GUI: Window management
    • None
    • Linux, X11, Qt4.6 and 4.7, Fvwm and KDE window managers.
    • 98ea80cc42d9d632430ef8812b4fa1712dd98ce0

      The X11 -geometry WxH+X+Y argument is pretty much broken with Qt.

      If a window size is specified (but no position) the window always goes to the top left of the screen. It should be the requested size and let the window manager place the window. Setting the size and setting the position need to be independent of each other.

      The -geometry option is using setGeometry, even though the Qt documentation in restoring-geometry.html says that doesn't work in X11 and gives the advice to use resize and move for how to size and position the initial window.

      Negative -geometry X and Y values are incorrectly handled. -0-0 should place the window at the bottom right of the screen while -10-10 should put ten pixels between the window border and the bottom and right of the screen, but depending on the window manager -0-0 will place it partly below and off the screen (fvwm) and -10-10 will not put 10 pixels between the window border and desktop. This is related to the window gravity and telling the window manager which direction to move the window when putting borders on it. This is further compounded in KDE by desktop panels, taskbar, etc which the current -geometry code doesn't account for, so it won't move away from that border until a number greater than the window of the desktop panel is given.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            david@fries.net David Fries
            david@fries.net David Fries
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes